--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@drawable/spotify"
+        android:icon="@drawable/music_regular_132"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:name=".KarooSpotifyApplication"
