Fix oauth client id is not propagated to runner

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -10,6 +10,8 @@ on:
 
 jobs:
   build:
+    env:
+      SPOTIFY_CLIENT_ID: ${{ secrets.SPOTIFY_CLIENT_ID }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
