--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -38,11 +38,11 @@ jobs:
     - name: Build with Gradle
       run: ./gradlew build
 
-#    - name: Archive APK
-#      uses: actions/upload-artifact@v4
-#      with:
-#        name: app-release.apk
-#        path: app/build/outputs/apk/release/app-release.apk
+    - name: Archive APK
+      uses: actions/upload-artifact@v4
+      with:
+        name: app-release.apk
+        path: app/build/outputs/apk/release/app-release.apk
 
     - name: Create Release
       id: create_release
