--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:icon="@drawable/music_regular_132"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:name=".KarooSpotifyApplication"
+        android:name=".KarooSpintunesApplication"
         android:theme="@style/Theme.AppCompat">
         <activity
             android:name="de.timklge.karoospintunes.MainActivity"
