--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -16,6 +16,9 @@ jobs:
     permissions:
       contents: write
     steps:
+    - name: Extract tag name
+      if: startsWith(github.ref, 'refs/tags/')
+      run: echo "RELEASE_VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
     - name: Set up environment variables
       run: |
         echo "GPR_USER=${{ github.actor }}" >> $GITHUB_ENV
@@ -24,7 +27,7 @@ jobs:
         echo "KEY_PASSWORD=${{ secrets.KEY_PASSWORD }}" >> $GITHUB_ENV
         echo "KEYSTORE_PASSWORD=${{ secrets.KEYSTORE_PASSWORD }}" >> $GITHUB_ENV
         echo "KEYSTORE_BASE64=${{ secrets.KEYSTORE_BASE64 }}" >> $GITHUB_ENV
-
+        echo "BUILD_NUMBER=${{ github.run_number }}" >> $GITHUB_ENV
     - uses: actions/checkout@v4
     - name: set up JDK 17
       uses: actions/setup-java@v4
