Update screenshots, prepare release

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -55,6 +55,6 @@ jobs:
         name: ${{ github.ref_name }}
         prerelease: false
         generateReleaseNotes: true
-        artifacts: app/build/outputs/apk/release/app-release.apk, app/manifest.json, app/karoo-spintunes.png
+        artifacts: app/build/outputs/apk/release/app-release.apk, app/manifest.json, app/karoo-spintunes.png, player.png, playlists.png, podcast.png, login.png
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
